[package]
name = "netservices"
description = "Library for building scalable privacy-preserving microservices P2P nodes"
version = "0.8.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@cyphernet.org>"]
keywords = ["privacy", "cypherpunk", "tor", "microservices", "reactor"]
categories = ["network-programming", "cryptography", "concurrency"]
homepage = "https://cyphernet.org"
repository = "https://github.com/Cyphernet-DAO/rust-netservices"
rust-version = "1.69"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
amplify = "4.6.0"
io-reactor = { version = "0.5.2", optional = true }
cyphernet = { version = "0.5.2", features = ["ed25519", "pem", "multibase", "noise_sha2", "noise_x25519", "noise-framework", "mixnets", "dns"] }
mio = { version = "1.0.0", optional = true }
socket2 = { version = "0.5.7", optional = true, features = ["all"] }
libc = "0.2.154"
log_crate = { package = "log", version = "0.4.17", optional = true }
rand = "0.8.5" # Used in SplitIo shared secret

[dev-dependencies]
cyphernet = { version = "0.5.2", features = ["ed25519"] }
bitcoin_hashes = "0.14.0"
log_crate = { package = "log", version = "0.4.17" }

[features]
default = ["reactor", "socket2"]
all = ["reactor", "nonblocking", "eidolon", "mio", "log"]
eidolon = ["cyphernet/eidolon", "cyphernet/x25519"]
reactor = ["io-reactor", "nonblocking"]
nonblocking = ["socket2"]
log = ["log_crate", "io-reactor/log"]

[package.metadata.docs.rs]
all-features = false
features = []
rustc-args = ["--cfg", "docsrs"]
