[package]
name = "nsh"
version = "0.1.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Noise_XK-based secure shell"
repository = "https://github.com/Internet2-WG/rust-netservices"
keywords = ["cyphernet", "noise-xk", "privacy", "cryptography", "shell"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
license = "MIT"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
amplify = "3.12.1"
streampipes = { path = "../streampipes" }
pollnode = { path = "../pollnode" }
cyphernet = { git = "https://github.com/Internet2-WG/rust-cyphernet" }
ntls = { git = "https://github.com/Internet2-WG/ntls" }
clap = "4.0.11"
