[package]
name = "nsh"
version = "0.1.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Secure remote shell based on Noise_XK stream encryption"
repository = "https://github.com/Internet2-WG/rust-netservices"
keywords = ["cyphernet", "noise-xk", "privacy", "cryptography", "shell"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
license = "MIT"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
amplify = "3.12.1"
streampipes = { path = "../streampipes" }
ioreactor = { path = "../reactor", features = ["popol"] }
cyphernet = { git = "https://github.com/Internet2-WG/rust-cyphernet", features = ["ed25519"] }
ntls = { git = "https://github.com/Internet2-WG/ntls" }
ed25519-compact = { version = "2.0.2", features = ["ed25519", "x25519", "pem", "ct-codecs"] }
clap = { version = "4.0.11", features = ["derive"] }
shellexpand = "2.1.2"
crossbeam-channel = "0.5.6"
log = { version = "0.4.17", features = ["std"] }
