[package]
name = "nsh"
version = "0.1.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
description = "Secure remote shell based on Noise_XK stream encryption"
repository = "https://github.com/Cyphernet-WG/rust-netservices"
keywords = ["cyphernet", "noise_xk", "privacy", "cryptography", "shell"]
categories = ["network-programming", "cryptography", "command-line-utilities"]
license = "MIT"
edition = "2021"
rust-version = "1.59.0"

[dependencies]
amplify = "4.0.0-beta.7"
io-reactor = { path = "../io-reactor", features = ["log"] }
netservices = { path = "..", features = ["socket2", "log"] }
cyphernet = { version = "0.1.0", features = ["ed25519", "dns", "tor"] }
ed25519-compact = { version = "2.0.2", features = ["ed25519", "x25519", "pem", "ct-codecs", "random"] }
clap = { version = "4.0.11", features = ["derive"] }
shellexpand = "2.1.2"
crossbeam-channel = "0.5.6"
log = { version = "0.4.17", features = ["std"] }
env_logger = "0.10.0"

[patch.crates-io]
cyphernet = { git = "https://github.com/Cyphernet-WG/rust-cyphernet", branch = "master" }
