[package]
name = "pollnode"
description = "P2P node library using poll reactor pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
popol = "0.5.0"
nakamoto-net = "0.3.0"
nakamoto-net-poll = "0.3.0"
