[package]
name = "re-actor"
description = "Rust implementation of reactor pattern for I/O resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "3.13.0"
crossbeam-channel = "0.5.6"
popol = { version = "1.0.0", git = "https://github.com/Internet2-WG/popol", branch = "api", optional = true }
polling = { version = "2.4.0", optional = true }
epoll = { version = "4.3.1", optional = true }
mio = { version = "0.8.5", optional = true }
zmq = { version = "0.10.0", optional = true }
socket2 = { version = "0.4.7", optional = true }
libc = "0.2.71"

[features]
default = ["popol", "polling", "socket2"]
all = ["popol", "polling", "epoll", "mio", "zmq", "socket2"]
