[package]
name = "reactor"
description = "Rust implementation of reactor pattern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplify = "3.13.0"
crossbeam-channel = "0.5.6"
popol = { version = "1.0.0", git = "https://github.com/Internet2-WG/popol", branch = "api", optional = true }
socket2 = "0.4"
libc = "0.2.71"

[features]
default = []
all = ["popol"]
